# polar-fit-sync

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  GITHUB_SETUP_PLAN.md  OBJECTIONS.md  PLAN.md  PLAN_SPLIT_DATA_DIRS_AND_PORT.md  README.md  SPEC.md  docker-compose.yml  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release.yml
src/polar_fit_sync/: __init__.py  __main__.py  config.py  db.py  polar.py  scheduler.py  sync.py  web.py  webhook.py
src/polar_fit_sync/templates/: connected.html  index.html
tests/: test___main__.py  test_config.py  test_db.py  test_polar.py  test_scheduler.py  test_sync.py  test_web.py  test_webhook.py
