[project]
name = "polar-fit-sync"
version = "0.2.1"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "pydantic-settings>=2.2",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "fitparse>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
